--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "banned-history",
+  "name": "banned-historical-archives",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -32,8 +32,10 @@
     "pdfjs-dist": "2.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-markdown": "^8.0.3",
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
+    "remark-gfm": "^3.0.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.7",
