--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@loadable/component": "^5.15.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@mui/x-data-grid": "^5.13.0",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "^17.0.29",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
