--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,12 @@ on: [push]
 
 jobs:
   container-job:
-    runs-on: node:latest
+    runs-on: ubuntu-latest
+
+    # runs all of the steps inside the specified container rather than on the VM host.
+    # Because of this the network configuration changes from host based network to a container network.
+    container:
+      image:  node:10.16-jessie
 
     services:
       mysql:
@@ -22,8 +27,6 @@ jobs:
         # If we were running the job on the VM this would be localhost
         MYSQL_HOST: mysql
         MYSQL_PORT: 3306
-    - run: apt-get update -y -qq
-    - run: apt-get install -y -qq --no-install-recommends default-mysql-client
     - run: mysql --user=root --password="root_password" --host=mysql --execute "CREATE DATABASE banned_history CHARACTER SET utf8 COLLATE utf8_general_ci;"
     - run: GITLAB_CI=true npm run init-db
     - run: GITLAB_CI=true npm run build
