--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,10 @@ jobs:
         # If we were running the job on the VM this would be localhost
         MYSQL_HOST: mysql
         MYSQL_PORT: 3306
+    - name: Use Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 17.9
     - run: npm install
     - run: GITLAB_CI=true npm run init-db
     - run: GITLAB_CI=true npm run build
