--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,5 +4,5 @@
     "strictPropertyInitialization": false
   },
   "include": ["./**/*.ts", "../types"],
-  "extends": "../tsconfig.node.json"
+  "extends": "../tsconfig.json"
 }
