--- a/package.json
+++ b/package.json
@@ -1,56 +1,55 @@
 {
-  "name": "banned-historical-archives",
+  "name": "x",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
   "scripts": {
-    "dev:build-static": "ts-node --project ./tsconfig.node.json ./backend/build-static.ts",
-    "init-db": "ts-node --project ./tsconfig.node.json ./backend/init-db.ts",
-    "dev:prepare": "cp -r ./node_modules/pdfjs-dist ./public/",
-    "dev": "npm run dev:prepare && vite",
-    "build-static": "PRODUCTION_MODE=true ts-node --project ./tsconfig.node.json ./backend/build-static.ts",
+    "dev": "next dev",
+    "build": "npm run prepare && next build && next export",
+    "prepare": "cp -r ./node_modules/pdfjs-dist ./public/",
     "test": "vitest",
-    "build": "vite build && cp -r ./node_modules/pdfjs-dist ./dist/ && npm run build-static && cp -r ./public/books ./dist/books",
-    "preview": "vite preview"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.18.9",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@loadable/component": "^5.15.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@mui/x-data-grid": "^5.13.0",
     "@types/diff": "^5.0.2",
     "axios": "^0.27.2",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "diff": "^5.1.0",
     "dommatrix": "^1.0.3",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
+    "next": "12.2.3",
     "node-fetch": "^2.6.7",
     "pdf.js": "^0.1.0",
     "pdfjs-dist": "2.12",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "raw-loader": "^4.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
     "react-pdf": "^5.7.2",
-    "react-router-dom": "^6.3.0",
     "remark-gfm": "^3.0.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.7",
+    "vitest": "^0.19.1",
     "web-streams-polyfill": "^3.2.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/loadable__component": "^5.13.4",
-    "@types/node": "^17.0.29",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/node": "18.6.1",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
     "@types/react-pdf": "^5.7.2",
-    "@vitejs/plugin-react": "^1.3.0",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.9",
-    "vitest": "^0.18.0"
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.3",
+    "json-loader": "^0.5.7",
+    "typescript": "4.7.4"
   }
 }
