--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "rootDir": "../",
+    "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false
   },
   "include": ["./**/*.ts", "../types"],
