--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
     # Because of this the network configuration changes from host based network to a container network.
     container:
       image:  node:10.16-jessie
+      options: --user root
 
     services:
       mysql:
