--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 17.9
-    - run: npm install
-    - run: GITLAB_CI=true npm run init-db
-    - run: GITLAB_CI=true sudo npm run build
+        cmd: npm install
+        cmd: GITLAB_CI=true npm run init-db
+        cmd: GITLAB_CI=true npm run build
     - name: Deploy to GitHub Pages
       uses: crazy-max/ghaction-github-pages@v3
       with:
