--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,6 @@ jobs:
     # Because of this the network configuration changes from host based network to a container network.
     container:
       image:  node:10.16-jessie
-
     services:
       mysql:
         image: mysql:5.7
@@ -36,7 +35,10 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 17.9
-        cmd: GITLAB_CI=true npm install && npm run init-db && npm run build
+    - run: npm install
+    - run: cp -r ./node_modules/pdfjs-dist ./public/
+    - run: GITLAB_CI=true npm run init-db
+    - run: GITLAB_CI=true npm run build
     - name: Deploy to GitHub Pages
       uses: crazy-max/ghaction-github-pages@v3
       with:
