--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "init-db": "ts-node --project ./tsconfig.build.json ./backend/init-db.ts",
-    "build": "npm run cp-pdfjs && next build && next export",
+    "build": "next build && next export",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
     "test": "vitest",
     "start": "next start",
