--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "init-db": "ts-node --project ./tsconfig.build.json ./backend/init-db.ts",
     "build": "next build && next export",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
+    "postbuild": "next-sitemap",
     "test": "vitest",
     "start": "next start",
     "lint": "next lint"
@@ -27,6 +28,7 @@
     "express": "^4.18.1",
     "mysql": "^2.18.1",
     "next": "12.2.3",
+    "next-sitemap": "^3.1.13",
     "node-fetch": "^2.6.7",
     "pdf.js": "^0.1.0",
     "pdfjs-dist": "2.12",
