--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ pages:
     - cp -r ./node_modules/pdfjs-dist ./public/
     - CI=true npm run init-db
     - SITE_URL='https://banned-historical-archives.gitlab.io' CI=true npm run build
+    - mv out/BingSiteAuth.gitlab.xml out/BingSiteAuth.xml
     - rm -rf public
     - mv out public
   artifacts:  
