--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
     - run: SITE_URL='https://banned-historical-archives.github.io' CI=true npm run build
     - run: touch out/.nojekyll
     - run: mv out/BingSiteAuth.github.xml out/BingSiteAuth.xml
+    - run: mv out/googlefd23833910da97f2.github.html out/googlefd23833910da97f2.html
     - name: Deploy to GitHub Pages
       uses: crazy-max/ghaction-github-pages@v3
       with:
