--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ pages:
     - CI=true npm run init-db
     - SITE_URL='https://banned-historical-archives.gitlab.io' CI=true npm run build
     - mv out/BingSiteAuth.gitlab.xml out/BingSiteAuth.xml
+    - mv out/googlefd23833910da97f2.gitlab.html out/googlefd23833910da97f2.html
     - rm -rf public
     - mv out public
   artifacts:  
