--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "diff": "^5.1.0",
+    "diff-match-patch": "^1.0.5",
     "dommatrix": "^1.0.3",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
@@ -49,6 +50,7 @@
     "@babel/core": "^7.18.9",
     "@babel/plugin-syntax-export-default-from": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/diff-match-patch": "^1.0.32",
     "@types/node": "18.6.1",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
