--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
+    "dbffile-fix-decoding": "^1.8.1",
     "diff": "^5.1.0",
     "diff-match-patch": "^1.0.5",
     "dommatrix": "^1.0.3",
     "express": "^4.18.1",
+    "iconv-lite": "^0.6.3",
+    "memo_file": "^1.1.0",
     "mysql": "^2.18.1",
     "next": "12.2.3",
     "next-sitemap": "^3.1.13",
