--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,7 @@
 name: build
-on: [push]
+on:
+  push:
+    branches: [ "master" ]
 
 jobs:
   container-job:
@@ -38,7 +40,7 @@ jobs:
     - run: npm install
     - run: cp -r ./node_modules/pdfjs-dist ./public/
     - run: CI=true npm run init-db
-    - run: SITE_URL='https://banned-historical-archives.github.io' CI=true npm run build
+    - run: SITE_URL='https://banned-historical-archives.github.io' CI=true COMMIT_HASH="${{ github.sha }}" npm run build
     - run: touch out/.nojekyll
     - run: mv out/BingSiteAuth.github.xml out/BingSiteAuth.xml
     - run: mv out/googlefd23833910da97f2.github.html out/googlefd23833910da97f2.html
