--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -16,7 +16,10 @@ jobs:
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
-      - run: COMMIT_HASH="${{ github.sha }}" BODY="${{ github.event.comment.body }}" node patch/index.js >> $GITHUB_ENV
+      - run: node patch/index.js >> $GITHUB_ENV
+        env:
+          COMMIT_HASH: ${{ github.sha }}
+          BODY: ${{ github.event.comment.body }}
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v4
