--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -4,10 +4,8 @@ on:
     types: [opened]
 
 jobs:
-  issue_commented:
-    # This job only runs for issue comments
-    name: Issue comment
-    if: ${{ !github.event.issue.pull_request }}
+  issue:
+    name: Issue
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,7 +17,7 @@ jobs:
       - run: node patch/index.js >> $GITHUB_ENV
         env:
           COMMIT_HASH: ${{ github.sha }}
-          BODY: ${{ github.event.comment.body }}
+          BODY: ${{ github.event.issue.body }}
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v4
