--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "COMMIT_HASH=$(git rev-parse HEAD) next dev",
+    "dev:ocr-server": "ts-node --project ./tsconfig.build.json ./backend/ocr-server.ts",
     "init-db": "ts-node --project ./tsconfig.build.json ./backend/init-db.ts",
     "build": "next build && next export",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
@@ -18,11 +19,15 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@mui/x-data-grid": "^5.13.0",
+    "@types/connect-timeout": "^0.0.36",
     "@types/diff": "^5.0.2",
+    "@types/express": "^4.17.13",
     "axios": "^0.27.2",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
+    "connect-timeout": "^1.9.0",
+    "cors": "^2.8.5",
     "dbffile-fix-decoding": "^1.8.1",
     "diff-match-patch": "^1.0.5",
     "dommatrix": "^1.0.3",
@@ -52,6 +57,7 @@
     "@babel/core": "^7.18.9",
     "@babel/plugin-syntax-export-default-from": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/cors": "^2.8.12",
     "@types/diff-match-patch": "^1.0.32",
     "@types/node": "18.6.1",
     "@types/react": "18.0.15",
