--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
     - run: touch out/.nojekyll
     - run: mv out/BingSiteAuth.github.xml out/BingSiteAuth.xml
     - run: mv out/googlefd23833910da97f2.github.html out/googlefd23833910da97f2.html
+    - run: git config --global http.postBuffer 2097152000
     - name: Deploy to GitHub Pages
       uses: crazy-max/ghaction-github-pages@v3
       with:
