--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "dbffile-fix-decoding": "^1.8.1",
     "diff-match-patch": "^1.0.5",
     "dommatrix": "^1.0.3",
+    "epub": "^1.2.1",
     "express": "^4.18.1",
     "iconv-lite": "^0.6.3",
+    "jsdom": "^20.0.0",
     "memo_file": "^1.1.0",
     "mysql": "^2.18.1",
     "next": "12.2.3",
@@ -59,6 +61,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/cors": "^2.8.12",
     "@types/diff-match-patch": "^1.0.32",
+    "@types/jsdom": "^20.0.0",
     "@types/node": "18.6.1",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
