--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           ref: master
       - name: ocr test
-        run: python /code/backend/ocr.py /code/public/images/filter.png ch_ppocr_mobile_v2.0 onnx ch_PP-OCRv3_det onnx 1496 0.3 10
+        run: python backend/ocr.py public/images/filter.png ch_ppocr_mobile_v2.0 onnx ch_PP-OCRv3_det onnx 1496 0.3 10
