--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -13,5 +13,24 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: master
-      - name: ocr test
-        run: python backend/ocr.py public/images/filter.png ch_ppocr_mobile_v2.0 onnx ch_PP-OCRv3_det onnx 1496 0.3 10
+      - run: |
+          git submodule update public/books/archives1
+      - uses: actions/setup-node@v3.4.1
+        with:
+          node-version: 16
+      - run: npm i
+      - run: npx ts-node --project ./tsconfig.build.json backend/ocr-gitworkflow.ts >> $GITHUB_ENV
+        env:
+          BODY: ${{ github.event.issue.body }}
+          TITLE: ${{ github.event.issue.title }}
+      - run: |
+          cd public/books/archives1
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "feat: ${{ github.event.issue.title }}"
+          git push
+      - run: |
+          git add .
+          git commit -m "feat: ${{ github.event.issue.title }}"
+          git push
