--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "iconv-lite": "^0.6.3",
     "image-size": "^1.0.2",
     "jsdom": "^20.0.0",
+    "json5": "^2.2.1",
     "memo_file": "^1.1.0",
     "mysql": "^2.18.1",
     "next": "12.2.3",
