--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -13,8 +13,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: master
-      - run: |
-          git submodule update public/books/archives1
+          submodule: true
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
