--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -10,6 +10,8 @@ jobs:
     container:
       image: breezedeus/cnocr:v2.2
     steps:
+      - name: Cleaning Operation
+        run : sudo find /opt/actions-runner/_work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/. -name . -o -prune -exec rm -rf -- {} + || true
       - uses: actions/checkout@v3
         with:
           ref: master
