--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           ref: master
           submodule: true
-        run: sudo chown -R $USER:$USER /__w
+      - run: sudo chown -R $USER:$USER /__w
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
