--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   issue:
     name: Issue
+    if: ${{ startsWith(github.event.issue.title, '[自动化文稿录入]') }}
     runs-on: ubuntu-latest
     container:
       image: breezedeus/cnocr:v2.2
