--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -4,9 +4,9 @@ on:
     types: [opened]
 
 jobs:
-  issue:
-    name: Issue
-    if: ${{ startsWith(github.event.issue.title, '[自动化文稿录入]') }}
+  ocr:
+    name: OCR
+    if: ${{ startsWith(github.event.issue.title, '{自动化文稿录入}') }}
     runs-on: ubuntu-latest
     container:
       image: breezedeus/cnocr:v2.2
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: master
-          submodule: true
+          submodules: true
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
@@ -24,12 +24,12 @@ jobs:
         env:
           BODY: ${{ github.event.issue.body }}
           TITLE: ${{ github.event.issue.title }}
-      - run: cd ./public/books/archives1
       - name: Create Pull Request For Submodule
-        id: cprs
+        id: cpr
         uses: peter-evans/create-pull-request@v4
         with:
-          body: 'fix https://github.com/banned-historical-archives/banned-historical-archives.github.io/issues/${{ github.event.issue.number }}'
+          body: 'fix #${{ github.event.issue.number }}'
+          path: public/books/archives1
           committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           signoff: false
@@ -43,8 +43,7 @@ jobs:
             owners
             maintainers
           draft: false
-      - run: cd ../../
-      - name: Create Pull Request For Core
+      - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v4
         with:
