--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -12,7 +12,7 @@ jobs:
       image: breezedeus/cnocr:v2.2
       options: --user root
     steps:
-      - run: sudo apt install git -y
+      - run: apt install git -y
       - uses: actions/checkout@v3
         with:
           ref: master
