--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: master
-          token: ${{ secrets.CI_TOKEN }}
+          token: ${{ secrets.GH_PAT }}
           submodules: true
       - uses: actions/setup-node@v3.4.1
         with:
