--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           ref: master
           token: ${{ secrets.GH_PAT }}
-          submodules: true
+      - run: git submodule update public/books/archives1
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
