--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -20,7 +20,7 @@ jobs:
           ref: master
           token: ${{ secrets.GH_PAT }}
       - run: git config --global --add safe.directory /__w/banned-historical-archives.github.io/banned-historical-archives.github.io
-      - run: git submodule update public/books/archives1
+      - run: git submodule update --init -- public/books/archives1
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
