--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
-      - run: npm i && chmod -R 777 ./
+      - run: npm i && chmod -R $USER:$USER ./
       - run: npx ts-node --project ./tsconfig.build.json backend/ocr-gitworkflow.ts
         env:
           BODY: ${{ github.event.issue.body }}
