--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -12,12 +12,6 @@ jobs:
       image: breezedeus/cnocr:v2.2
       options: --user root
     steps:
-      - name: investigate
-        run: |
-          pwd
-          whoami
-          ls -la
-          id -u
       - run: add-apt-repository -y ppa:git-core/ppa
       - run: apt update
       - run: apt install git -y
@@ -30,8 +24,9 @@ jobs:
         with:
           node-version: 16
       - run: npm i
-      - run: npx -c whoami
-      - run: ls -la
+      - run: |
+        useradd -u 1001 ci
+        su ci
       - run: npx ts-node --project ./tsconfig.build.json backend/ocr-gitworkflow.ts
         env:
           BODY: ${{ github.event.issue.body }}
