--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -24,9 +24,7 @@ jobs:
         with:
           node-version: 16
       - run: npm i
-      - run: |
-        useradd -u 1001 ci
-        su ci
+      - run: useradd -u 1001 ci && su ci
       - run: npx ts-node --project ./tsconfig.build.json backend/ocr-gitworkflow.ts
         env:
           BODY: ${{ github.event.issue.body }}
