--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -25,6 +25,8 @@ jobs:
         with:
           node-version: 16
       - run: npm i
+      - run: ls -la backend
+      - run: whoami
       - run: npx ts-node --project ./tsconfig.build.json backend/ocr-gitworkflow.ts
         env:
           BODY: ${{ github.event.issue.body }}
