--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -15,7 +15,7 @@ jobs:
       - run: add-apt-repository -y ppa:git-core/ppa
       - run: apt update
       - run: apt install git -y
-      - run: useradd -u 1001 ci && su ci
+      - run: useradd -u 1001 ci
       - uses: actions/checkout@v3
         with:
           ref: master
@@ -25,8 +25,7 @@ jobs:
         with:
           node-version: 16
       - run: npm i
-      - run: ls -la backend
-      - run: whoami
+      - run: chmod -R ci:ci ./
       - run: npx ts-node --project ./tsconfig.build.json backend/ocr-gitworkflow.ts
         env:
           BODY: ${{ github.event.issue.body }}
