--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -30,6 +30,8 @@ jobs:
         env:
           BODY: ${{ github.event.issue.body }}
           TITLE: ${{ github.event.issue.title }}
+      - run: ls -la public/books/archives1
+      - run: ls -la public/books/archives1/.git
       - run: rm -rf public/books/archives1/.git/shallow
       - run: git config --global --add safe.directory /__w/banned-historical-archives.github.io/banned-historical-archives.github.io/public/books/archives1
       - run: cd public/books/archives1 && git status
