--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -19,8 +19,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: master
-          token: ${{ secrets.GH_PAT }}
-          submodules: recursive
+          ssh-key: ${{ secrets.SSH_KEY }}
+          submodules: true
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
