--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -23,6 +23,7 @@ jobs:
           fetch-depth: 0
           submodules: true
       - run: git config --global --add safe.directory /__w/banned-historical-archives.github.io/banned-historical-archives.github.io/public/books/archives1
+      - run: git config --global --add safe.directory /__w/banned-historical-archives.github.io/banned-historical-archives.github.io
       - run: git submodule update --init --recursive
       - uses: actions/setup-node@v3.4.1
         with:
