--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -24,10 +24,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: master
-          ssh-key: ${{ secrets.SSH_KEY }}
+          submodules: true
       - run: git config --global --add safe.directory /__w/banned-historical-archives.github.io/banned-historical-archives.github.io/public/books/archives1
       - run: git config --global --add safe.directory /__w/banned-historical-archives.github.io/banned-historical-archives.github.io
-      - run: git submodule update --init public/books/archives1
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
